...
        self.delegate = delegate
        self.statisticService = statisticService
    }
    
    func showAlert(model: AlertModel) {
        let alert = UIAlertController(title: model.title, message: model.message, preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "GameResultsAlert"
        
        let action = UIAlertAction(title: model.buttonText, style: .default) { _ in
            model.completion?()
        }
        alert.addAction(action)
        
...
            Средняя точность: \(formattedAccuracy)%
            """
        
        let alertModel = AlertModel(
            title: "Этот раунд окончен!",
            message: message,
            buttonText: "Сыграть еще раз"
        ) { [weak self] in
            self?.delegate?.restartQuiz()
        }
        
        showAlert(model: alertModel)
    }
...
